fixed container margin bug on smallest media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,7 @@ h4 {
    #instructions {
        padding: .4em;
        letter-spacing: 0px;
+       margin: 0;
    }
     
 
